--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_book" />
+                android:src="@drawable/ic_logo" />
 
             <TextView
                 android:id="@+id/tv_welcome"
@@ -41,9 +41,9 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nunitobold"
                 android:textSize="40sp"
-                android:gravity="center"
+                android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:text="Welcome to      Shikshan Kranti Sanghatna" />
+                android:text="Welcome" />
         </LinearLayout>
     </FrameLayout>
 
