--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -267,8 +267,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="20dp"
-                        borderColor="#707070"
+                        android:layout_margin="30dp"
+                        android:background="@drawable/shapebuttons"
                         android:fontFamily="@font/nunitobold"
                         android:text="@string/next"
                         android:textColor="#fff"
