--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -32,7 +32,7 @@
                     android:padding="5dp"
                     android:contentDescription="Heading"
                     android:textColor="@color/white"
-                    android:fontFamily="@font/nunitobold"
+                    android:fontFamily="@font/nunitoregular"
                     android:textSize="25sp"/>
 
                 <ImageButton
