--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nunitobold"
                 android:textSize="40sp"
+                android:textColor="@color/design_default_color_error"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:text="Welcome" />
