--- a/app/src/main/res/layout/activity_selectlanguage.xml
+++ b/app/src/main/res/layout/activity_selectlanguage.xml
@@ -4,10 +4,6 @@
     android:keepScreenOn="true"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
         <include layout="@layout/header" />
 
@@ -28,7 +24,6 @@
                 android:textSize="35sp" />
 
             <TextView
-                android:id="@+id/choose_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
@@ -40,7 +35,6 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/english"
-                borderColor="#707070"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -56,7 +50,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
                 android:src="@drawable/shapedotted"
-                android:layerType="software" />
+                android:layerType="software"
+                android:contentDescription="TODO" />
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/hindi"
                 android:layout_width="wrap_content"
@@ -76,7 +71,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-    </LinearLayout>
 </LinearLayout>
 
 
