--- a/app/src/main/res/layout/finalreport_layout.xml
+++ b/app/src/main/res/layout/finalreport_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
@@ -26,7 +27,8 @@
             android:padding="10dp"
             android:background="@drawable/shapebuttons"
             android:outlineAmbientShadowColor="@color/colorPrimary"
-            android:outlineSpotShadowColor="@color/colorPrimaryDark">
+            android:outlineSpotShadowColor="@color/colorPrimaryDark"
+            tools:ignore="UnusedAttribute">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,19 +44,20 @@
                     android:background="@color/design_default_color_error">
 
                     <ImageView
-                        android:id="@+id/ivlogo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@mipmap/ic_launcher"
+                        android:contentDescription="TODO" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="Maharashtra Rajya Shikshan Kranti Sanghatna"
+                        android:fontFamily="@font/nunitobold"
+                        android:text="महाराष्ट्र राज्य शिक्षण क्रांती संघटना"
                         android:textColor="#fff"
-                        android:textSize="25sp" />
+                        android:textSize="20sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -67,14 +70,28 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:orientation="vertical">
-
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
                         <ImageView
                             android:id="@+id/ivPhoto"
-                            android:layout_width="180dp"
-                            android:layout_height="150dp"
+                            android:layout_width="250dp"
+                            android:layout_height="120dp"
                             android:layout_gravity="center"
-                            android:src="@drawable/ic_book" />
-
+                            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
+                            android:src="@drawable/ic_book"
+                            android:contentDescription="TODO" />
+                            <ImageView
+                                android:id="@+id/ivqrcode"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="end"
+                                android:layout_weight="0.4"
+                                android:src="@drawable/ic_book"
+                                android:contentDescription="TODO" />
+                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -87,20 +104,20 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.4"
                                 android:gravity="start"
+                                android:fontFamily="@font/nunitobold"
                                 android:padding="5dp"
                                 android:text="Member ID :"
                                 android:textSize="20sp" />
 
                             <TextView
-                                android:id="@+id/tvMemberID"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.4"
                                 android:gravity="start"
-
                                 android:padding="5dp"
+                                android:fontFamily="@font/nunitobold"
                                 android:text="SK12345"
-                                android:textSize="25sp" />
+                                android:textSize="20sp" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -115,7 +132,7 @@
                                 android:layout_weight="0.4"
                                 android:gravity="start"
                                 android:padding="5dp"
-
+                                android:fontFamily="@font/nunitobold"
                                 android:text="Name :"
                                 android:textSize="20sp" />
 
@@ -125,10 +142,10 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.4"
                                 android:padding="5dp"
-
                                 android:gravity="start"
+                                android:fontFamily="@font/nunitobold"
                                 android:text="Aakash Mohan Jagtap"
-                                android:textSize="25sp" />
+                                android:textSize="20sp" />
 
                         </LinearLayout>
 
@@ -144,7 +161,7 @@
                                 android:layout_weight="0.4"
                                 android:gravity="start"
                                 android:padding="5dp"
-
+                                android:fontFamily="@font/nunitobold"
                                 android:text="DOB :"
                                 android:textSize="20sp" />
 
@@ -154,10 +171,10 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.4"
                                 android:padding="5dp"
-
+                                android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
                                 android:text="04/05/1989"
-                                android:textSize="25sp" />
+                                android:textSize="20sp" />
 
                         </LinearLayout>
 
@@ -165,24 +182,17 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:visibility="gone"
                             android:orientation="horizontal">
 
                             <ImageView
-                                android:id="@+id/ivsign"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="start"
                                 android:layout_weight="0.4"
-                                android:src="@drawable/ic_book" />
+                                android:src="@drawable/ic_book"
+                                android:contentDescription="TODO" />
 
-                            <ImageView
-                                android:id="@+id/ivqrcode"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="end"
-                                android:layout_weight="0.4"
-                                android:src="@drawable/ic_book" />
+
 
                         </LinearLayout>
                     </LinearLayout>
@@ -197,7 +207,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="Maharashtra Shikshan Kranti Sanghatna"
-                            android:textSize="25sp" />
+                            android:textSize="20sp" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -209,7 +219,6 @@
         </androidx.cardview.widget.CardView>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btndownloadidcard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -219,10 +228,9 @@
             android:padding="10dp"
             android:text="Download ID Card"
             android:textColor="#fff"
-            android:textSize="25sp" />
+            android:textSize="20sp" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnchangedetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -230,9 +238,9 @@
             android:background="@drawable/shapebuttons"
             android:fontFamily="@font/nunitobold"
             android:padding="10dp"
-            android:text="Change Card Details"
+            android:text="Change Details"
             android:textColor="#fff"
-            android:textSize="25sp" />
+            android:textSize="20sp" />
 
 
     </LinearLayout>
