--- a/app/src/main/res/layout/capture_layout.xml
+++ b/app/src/main/res/layout/capture_layout.xml
@@ -18,14 +18,14 @@
         <include
             layout="@layout/header"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
+
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:visibility="gone"
             android:background="@color/nameheading"
+            android:visibility="gone"
             app:layout_collapseMode="pin">
 
             <TextView
@@ -42,9 +42,9 @@
                 android:gravity="right"
                 android:paddingEnd="3dp"
                 android:text="---"
-                android:visibility="gone"
                 android:textColor="@color/white"
-                android:textSize="26sp" />
+                android:textSize="26sp"
+                android:visibility="gone" />
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -57,10 +57,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:scrollbars="vertical"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:scrollbars="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -68,45 +68,107 @@
                     android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
                         android:layout_marginBottom="10dp"
                         android:fontFamily="@font/nunitobold"
                         android:gravity="center"
-                        android:layout_margin="20dp"
                         android:text="Photo For ID Card"
                         android:textColor="#f4641d"
                         android:textSize="35sp" />
 
 
-                        <ImageView
-                            android:id="@+id/ivPhoto"
-                            android:src="@mipmap/ic_profile"
-                            android:layout_gravity="center"
-                            android:layout_width="400dp"
-                            android:layout_height="300dp"
-                            android:contentDescription="TODO" />
+                    <ImageView
+                        android:id="@+id/ivPhoto"
+                        android:layout_width="400dp"
+                        android:layout_height="300dp"
+                        android:layout_gravity="center"
+                        android:contentDescription="TODO"
+                        android:src="@mipmap/ic_profile" />
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btnCapture"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="30dp"
-                        android:background="@drawable/shapebuttons"
-                        android:fontFamily="@font/nunitobold"
-                        android:text="Capture"
-                        android:textColor="#fff"
-                        android:textSize="30sp" />
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/btnCapture"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/nunitobold"
+                                android:src="@drawable/ic_camera"
+                                android:text="Capture"
+                                android:textColor="#fff"
+                                android:textSize="20sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="20dp"
+                                android:layout_marginBottom="10dp"
+                                android:fontFamily="@font/nunitobold"
+                                android:gravity="center"
+                                android:text="Click to Capture"
+                                android:textColor="#f4641d"
+                                android:textSize="20sp" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/ivGallery"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/nunitobold"
+                                android:src="@drawable/ic_photogallery"
+                                android:text="Gallery"
+                                android:textColor="#fff"
+                                android:textSize="20sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="20dp"
+                                android:layout_marginBottom="10dp"
+                                android:fontFamily="@font/nunitobold"
+                                android:gravity="center"
+                                android:text="Browse Photo"
+                                android:textColor="#f4641d"
+                                android:textSize="20sp" />
+
+                        </LinearLayout>
+                    </LinearLayout>
+
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btnNext"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="30dp"
-                        android:background="@drawable/shapebuttons"
                         android:fontFamily="@font/nunitobold"
+                        android:background="@drawable/common_full_open_on_phone"
                         android:shadowColor="@color/colorPrimaryDark"
                         android:text="@string/next"
                         android:textColor="#fff"
