--- a/app/src/main/res/layout-v28/finalreport_layout.xml
+++ b/app/src/main/res/layout-v28/finalreport_layout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:keepScreenOn="true"
     android:orientation="vertical">
 
@@ -9,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
         <include layout="@layout/header" />
 
     </LinearLayout>
@@ -17,16 +18,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#fffdd0"
+        android:scrollbars="vertical"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cvIDCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:padding="10dp"
+            android:layout_margin="20dp"
+            android:padding="20dp"
             android:background="@drawable/shapebuttons"
             android:outlineAmbientShadowColor="@color/colorPrimary"
-            android:outlineSpotShadowColor="@color/colorPrimaryDark">
+            android:outlineSpotShadowColor="@color/colorPrimaryDark"
+            tools:ignore="UnusedAttribute">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,15 +51,16 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:src="@mipmap/ic_launcher"
-                        android:contentDescription="TODO" />
+                        android:contentDescription="Logo" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:fontFamily="@font/nunitobold"
                         android:text="महाराष्ट्र राज्य शिक्षण क्रांती संघटना"
                         android:textColor="#fff"
-                        android:textSize="25sp" />
+                        android:textSize="20sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -67,27 +73,32 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:orientation="vertical">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:orientation="horizontal">
-                        <ImageView
-                            android:id="@+id/ivPhoto"
-                            android:layout_width="250dp"
-                            android:layout_height="120dp"
-                            android:layout_gravity="center"
-                            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
-                            android:src="@drawable/ic_book"
-                            android:contentDescription="TODO" />
+
+                            <de.hdodenhof.circleimageview.CircleImageView
+                                app:civ_border_width="1dp"
+                                android:id="@+id/ivPhoto"
+                                android:layout_width="200dp"
+                                android:layout_height="180dp"
+                                app:civ_border_color="#eeeeee"
+                                android:contentDescription="Profile Photo"
+                                android:padding="10dp"
+                                android:src="@drawable/ic_book" />
+
                             <ImageView
                                 android:id="@+id/ivqrcode"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="end"
                                 android:layout_weight="0.4"
-                                android:src="@drawable/ic_book"
-                                android:contentDescription="TODO" />
+                                android:background="@android:color/transparent"
+                                android:contentDescription="QR Code"
+                                android:src="@drawable/ic_book" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -99,7 +110,6 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:gravity="start"
                                 android:fontFamily="@font/nunitobold"
                                 android:padding="5dp"
@@ -107,13 +117,14 @@
                                 android:textSize="20sp" />
 
                             <TextView
+                                android:id="@+id/tvMemberID"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:gravity="start"
                                 android:padding="5dp"
+                                android:fontFamily="@font/nunitobold"
                                 android:text="SK12345"
-                                android:textSize="25sp" />
+                                android:textSize="20sp" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -125,7 +136,6 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:gravity="start"
                                 android:padding="5dp"
                                 android:fontFamily="@font/nunitobold"
@@ -136,11 +146,11 @@
                                 android:id="@+id/tvMemberName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:padding="5dp"
                                 android:gravity="start"
+                                android:fontFamily="@font/nunitobold"
                                 android:text="Aakash Mohan Jagtap"
-                                android:textSize="25sp" />
+                                android:textSize="20sp" />
 
                         </LinearLayout>
 
@@ -153,7 +163,6 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:gravity="start"
                                 android:padding="5dp"
                                 android:fontFamily="@font/nunitobold"
@@ -164,46 +173,46 @@
                                 android:id="@+id/tvDob"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:padding="5dp"
+                                android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
-                                android:text="04/05/1989"
-                                android:textSize="25sp" />
+                                android:text="@string/dob"
+                                android:textSize="20sp" />
 
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:visibility="gone"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="start"
-                                android:layout_weight="0.4"
-                                android:src="@drawable/ic_book"
-                                android:contentDescription="TODO" />
-
-
-
-                        </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="gone"
                         android:layout_gravity="center">
 
                         <TextView
+                            android:id="@+id/tvLocation"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="Maharashtra Shikshan Kranti Sanghatna"
-                            android:textSize="25sp" />
+                            android:text="Location :"
+                            android:padding="5dp"
+                            android:fontFamily="@font/nunitobold"
+                            android:gravity="start"
+                            android:textSize="20sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center">
+
+                        <TextView
+                            android:id="@+id/tvYear"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/memyear"
+                            android:padding="5dp"
+                            android:fontFamily="@font/nunitobold"
+                            android:gravity="start"
+                            android:textSize="20sp" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -215,10 +224,12 @@
         </androidx.cardview.widget.CardView>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnDownloadIDCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_gravity="center"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
             android:background="@drawable/shapebuttons"
             android:fontFamily="@font/nunitobold"
             android:padding="10dp"
@@ -227,6 +238,7 @@
             android:textSize="20sp" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnShareID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -234,7 +246,21 @@
             android:background="@drawable/shapebuttons"
             android:fontFamily="@font/nunitobold"
             android:padding="10dp"
-            android:text="Change Details"
+            android:text="@string/share_id_card"
+            android:textColor="#fff"
+            android:textSize="20sp" />
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnChangeDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:background="@drawable/shapebuttons"
+            android:fontFamily="@font/nunitobold"
+            android:padding="10dp"
+            android:text="@string/change_details"
             android:textColor="#fff"
             android:textSize="20sp" />
 
