--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/colorWhite"
     android:theme="@style/ThemeOverlay.ShikshanKrantiSanghatna.FullscreenContainer"
     tools:context=".FullscreenActivity">
 
@@ -30,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_logo" />
+                android:src="@mipmap/ic_logo" />
 
             <TextView
                 android:id="@+id/tv_welcome"
