--- a/app/src/main/res/layout/activity_mobile_number.xml
+++ b/app/src/main/res/layout/activity_mobile_number.xml
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="20dp"
-                    android:gravity="left"
+                    android:gravity="start"
                     android:orientation="vertical">
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -99,42 +99,14 @@
                         android:layout_margin="2dp"
                         android:paddingLeft="20dp"
                         android:paddingRight="20dp"
-                        app:hintTextAppearance="@style/CustomTextAppearance">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunitosemibold"
-                            android:gravity="fill_vertical"
-                            android:text="OTP"
-                            android:textColor="@color/black"
-                            android:textSize="25sp" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
+                        app:hintTextAppearance="@style/CustomTextAppearance"/>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dp"
                         android:paddingLeft="20dp"
-                        android:paddingRight="20dp">
-
-                        <EditText
-                            android:id="@+id/etOTP"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/shapeform"
-                            android:fontFamily="@font/nunitolight"
-                            android:hint="Enter OTP Here"
-                            android:imeOptions="flagNoExtractUi"
-                            android:importantForAutofill="no"
-                            android:inputType="number"
-                            android:isScrollContainer="true"
-                            android:maxLength="6"
-                            android:textColor="@color/black"
-                            android:textSize="20sp"
-                            tools:targetApi="o" />
-                    </com.google.android.material.textfield.TextInputLayout>
+                        android:paddingRight="20dp"/>
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btnSubmit"
