--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -28,7 +28,7 @@
         android:layout_height="120dp"
         android:layout_below="@id/relativeLayout"
         android:layout_marginTop="-50dp"
-        android:background="@drawable/ic_logo" />
+        android:background="@drawable/waves" />
 
     <TextView
         android:id="@+id/textView"
@@ -37,7 +37,7 @@
         android:layout_below="@id/imageView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:text="Wait for the code I sent you..."
+        android:text="Wait for the OTP..."
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:textColor="@color/colorPrimaryDark" />
 
@@ -49,7 +49,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="5dp"
-        android:text="I sent you a code, it will be detected automatically but if it is not detected you can put it below manually as well"
+        android:text="OTP will be detected automatically but if it is not detected you can put it below manually as well"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary" />
 
@@ -60,7 +60,7 @@
         android:layout_below="@id/textView1"
         android:layout_centerHorizontal="true"
         android:digits="0123456789"
-        android:hint="enter code"
+        android:hint="Please Enter OTP"
         android:maxLength="6" />
 
 
@@ -71,7 +71,7 @@
         android:layout_below="@id/editTextCode"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/shapebuttons"
         android:text="Sign In"
         android:textAllCaps="false"
         android:textColor="#ffffff" />
