--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -20,33 +20,6 @@
             layout="@layout/header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:visibility="gone"
-            android:background="@color/nameheading"
-            app:layout_collapseMode="pin">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="bottom|right"
-                android:text="AAKASH"
-                android:textColor="@color/grey"
-                android:textSize="26sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="right"
-                android:paddingEnd="3dp"
-                android:text="---"
-                android:visibility="gone"
-                android:textColor="@color/white"
-                android:textSize="26sp" />
-
-        </androidx.appcompat.widget.Toolbar>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,23 +35,6 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:fontFamily="@font/nunitobold"
-                        android:gravity="center"
-                        android:text="@string/profiledetails"
-                        android:textColor="@color/black"
-                        android:textSize="35sp" />
-
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -122,8 +78,8 @@
                             android:imeOptions="flagNoExtractUi"
                             android:importantForAutofill="no"
                             android:inputType="text"
-                            android:maxLength="25"
-                            android:scrollHorizontally="true"
+                            android:maxLength="100"
+                            android:scrollbars="vertical"
                             android:text=""
                             android:textColor="@color/black"
                             android:textSize="20sp"
