--- a/app/src/main/res/layout/finalreport_layout.xml
+++ b/app/src/main/res/layout/finalreport_layout.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:keepScreenOn="true"
     android:orientation="vertical">
 
@@ -10,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
         <include layout="@layout/header" />
 
     </LinearLayout>
@@ -18,13 +18,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#fffdd0"
+        android:scrollbars="vertical"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cvIDCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:padding="10dp"
+            android:layout_margin="20dp"
+            android:padding="20dp"
             android:background="@drawable/shapebuttons"
             android:outlineAmbientShadowColor="@color/colorPrimary"
             android:outlineSpotShadowColor="@color/colorPrimaryDark"
@@ -70,27 +73,32 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:orientation="vertical">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:orientation="horizontal">
-                        <ImageView
-                            android:id="@+id/ivPhoto"
-                            android:layout_width="250dp"
-                            android:layout_height="120dp"
-                            android:layout_gravity="center"
-                            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
-                            android:src="@drawable/ic_book"
-                            android:contentDescription="TODO" />
+
+                            <de.hdodenhof.circleimageview.CircleImageView
+                                app:civ_border_width="1dp"
+                                android:id="@+id/ivPhoto"
+                                android:layout_width="200dp"
+                                android:layout_height="180dp"
+                                app:civ_border_color="#eeeeee"
+                                android:contentDescription="TODO"
+                                android:padding="10dp"
+                                android:src="@drawable/ic_book" />
+
                             <ImageView
                                 android:id="@+id/ivqrcode"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="end"
                                 android:layout_weight="0.4"
-                                android:src="@drawable/ic_book"
-                                android:contentDescription="TODO" />
+                                android:background="@android:color/transparent"
+                                android:contentDescription="TODO"
+                                android:src="@drawable/ic_book" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -102,7 +110,6 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:gravity="start"
                                 android:fontFamily="@font/nunitobold"
                                 android:padding="5dp"
@@ -110,9 +117,9 @@
                                 android:textSize="20sp" />
 
                             <TextView
+                                android:id="@+id/tvMemberID"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:gravity="start"
                                 android:padding="5dp"
                                 android:fontFamily="@font/nunitobold"
@@ -129,7 +136,6 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:gravity="start"
                                 android:padding="5dp"
                                 android:fontFamily="@font/nunitobold"
@@ -140,7 +146,6 @@
                                 android:id="@+id/tvMemberName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:padding="5dp"
                                 android:gravity="start"
                                 android:fontFamily="@font/nunitobold"
@@ -158,7 +163,6 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:gravity="start"
                                 android:padding="5dp"
                                 android:fontFamily="@font/nunitobold"
@@ -169,7 +173,6 @@
                                 android:id="@+id/tvDob"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4"
                                 android:padding="5dp"
                                 android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
@@ -182,6 +185,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:visibility="gone"
                             android:orientation="horizontal">
 
                             <ImageView
@@ -203,10 +207,29 @@
                         android:layout_gravity="center">
 
                         <TextView
+                            android:id="@+id/tvLocation"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="Maharashtra Shikshan Kranti Sanghatna"
+                            android:text="Location :"
+                            android:padding="5dp"
+                            android:fontFamily="@font/nunitobold"
+                            android:gravity="start"
+                            android:textSize="20sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center">
+
+                        <TextView
+                            android:id="@+id/tvYear"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/memyear"
+                            android:padding="5dp"
+                            android:fontFamily="@font/nunitobold"
+                            android:gravity="start"
                             android:textSize="20sp" />
                     </LinearLayout>
 
@@ -219,10 +242,12 @@
         </androidx.cardview.widget.CardView>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnDownloadIDCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_gravity="center"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
             android:background="@drawable/shapebuttons"
             android:fontFamily="@font/nunitobold"
             android:padding="10dp"
@@ -231,6 +256,21 @@
             android:textSize="20sp" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnShareID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:background="@drawable/shapebuttons"
+            android:fontFamily="@font/nunitobold"
+            android:padding="10dp"
+            android:text="@string/share_id_card"
+            android:textColor="#fff"
+            android:textSize="20sp" />
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnChangeDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
