--- a/app/src/main/res/layout/terms_activity.xml
+++ b/app/src/main/res/layout/terms_activity.xml
@@ -5,10 +5,6 @@
     android:orientation="vertical"
     android:keepScreenOn="true">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
         <include layout="@layout/header"/>
 
@@ -19,20 +15,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical"
             android:layout_margin="30dp"
-            android:layout_weight="0.6"
-            android:baselineAligned="false">
+           >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:scrollbars="vertical"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -42,21 +30,25 @@
                     android:textColor="@color/design_default_color_on_secondary"
                     android:textSize="18sp" />
 
-
                 <CheckBox
                     android:id="@+id/cbagree"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:gravity="center"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="center"
                     android:checked="false"
-                    android:layout_margin="10dp">
+                    >
 
                 </CheckBox>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="I Agree"/>
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/nunitobold"
+                    android:text="@string/agreecheckbox"
+                    android:textSize="20sp"/>
+
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/nextButton"
                     android:layout_width="wrap_content"
@@ -71,38 +63,12 @@
 
             </LinearLayout>
 
-        </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="bottom"
-                android:padding="20dp"
-                android:visibility="gone"
-                android:baselineAligned="false">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="bottom"
-                    android:padding="20dp"
-                    android:layout_weight="1"
-                    >
-                    <com.google.android.material.button.MaterialButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="30dp"
-                        android:background="@drawable/shapebuttons"
-                        android:layout_gravity="bottom"
-                        android:text="30sp"
-                        />
-                </LinearLayout>
-            </LinearLayout>
 
 
 
 
 
-    </LinearLayout>
+
+
 
 </LinearLayout>
