--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,7 +17,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:background="@drawable/ic_logo"
-            android:contentDescription="TODO" />
+            android:contentDescription="Logo" />
 
     </RelativeLayout>
 
@@ -28,7 +27,8 @@
         android:layout_height="120dp"
         android:layout_below="@id/relativeLayout"
         android:layout_marginTop="-50dp"
-        android:background="@drawable/waves" />
+        android:background="@drawable/waves"
+        android:contentDescription="Waves" />
 
     <TextView
         android:id="@+id/textView"
