--- a/app/src/main/res/layout-v28/finalreport_layout.xml
+++ b/app/src/main/res/layout-v28/finalreport_layout.xml
@@ -113,7 +113,7 @@
                                 android:gravity="start"
                                 android:fontFamily="@font/nunitobold"
                                 android:padding="5dp"
-                                android:text="Member ID :"
+                                android:text="ID :"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -205,7 +205,6 @@
                         android:layout_gravity="center">
 
                         <TextView
-                            android:id="@+id/tvYear"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/memyear"
@@ -224,7 +223,6 @@
         </androidx.cardview.widget.CardView>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnDownloadIDCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
