--- a/app/src/main/res/layout/capture_layout.xml
+++ b/app/src/main/res/layout/capture_layout.xml
@@ -7,12 +7,6 @@
     android:orientation="vertical">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        android:weightSum="1">
 
 
         <include
@@ -35,12 +29,6 @@
                 android:orientation="vertical"
                 android:scrollbars="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -88,7 +76,8 @@
                                 android:src="@drawable/ic_camera"
                                 android:text="Capture"
                                 android:textColor="#fff"
-                                android:textSize="20sp" />
+                                android:textSize="20sp"
+                                android:contentDescription="Capture" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -120,7 +109,8 @@
                                 android:src="@drawable/ic_photogallery"
                                 android:text="Gallery"
                                 android:textColor="#fff"
-                                android:textSize="20sp" />
+                                android:textSize="20sp"
+                                android:contentDescription="Gallery" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -150,8 +140,6 @@
                 </LinearLayout>
             </LinearLayout>
 
-        </LinearLayout>
-    </LinearLayout>
 
 
 </LinearLayout>
