--- a/app/src/main/res/layout/finalreport_layout.xml
+++ b/app/src/main/res/layout/finalreport_layout.xml
@@ -97,7 +97,7 @@
                                 android:layout_gravity="end"
                                 android:layout_weight="0.4"
                                 android:background="@android:color/transparent"
-                                android:contentDescription="TODO"
+                                android:contentDescription="QR Code"
                                 android:src="@drawable/ic_book" />
                         </LinearLayout>
 
@@ -176,29 +176,10 @@
                                 android:padding="5dp"
                                 android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
-                                android:text="04/05/1989"
                                 android:textSize="20sp" />
 
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:visibility="gone"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="start"
-                                android:layout_weight="0.4"
-                                android:src="@drawable/ic_book"
-                                android:contentDescription="TODO" />
-
-
-
-                        </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
@@ -223,7 +204,6 @@
                         android:layout_gravity="center">
 
                         <TextView
-                            android:id="@+id/tvYear"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/memyear"
@@ -242,7 +222,6 @@
         </androidx.cardview.widget.CardView>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnDownloadIDCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
