--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -40,7 +40,7 @@
                 android:textColor="@color/design_default_color_error"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:text="Welcome" />
+                android:text="@string/welcome" />
         </LinearLayout>
 
 </merge>
