--- a/app/src/main/res/layout/activity_mobile_number.xml
+++ b/app/src/main/res/layout/activity_mobile_number.xml
@@ -59,7 +59,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunitosemibold"
                     android:gravity="center"
-                    android:text="Mobile Number"
+                    android:text="@string/mobile_number"
                     android:textColor="@color/black"
                     android:textSize="25sp" />
 
