--- a/app/src/main/res/layout/finalreport_layout.xml
+++ b/app/src/main/res/layout/finalreport_layout.xml
@@ -51,7 +51,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:src="@mipmap/ic_launcher"
-                        android:contentDescription="TODO" />
+                        android:contentDescription="Header Logo" />
 
                     <TextView
                         android:layout_width="match_parent"
