Language Same After IDCard

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="colorAccent">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="grey">#E0E0E0</color>
+    <color name="orange">#F44336</color>
 
 </resources>
