--- a/app/src/main/res/layout-v28/finalreport_layout.xml
+++ b/app/src/main/res/layout-v28/finalreport_layout.xml
@@ -100,6 +100,23 @@
                                 android:contentDescription="QR Code"
                                 android:src="@drawable/ic_book" />
                         </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="start"
+                                android:padding="5dp"
+                                android:textColor="@color/orange"
+                                android:fontFamily="@font/nunitobold"
+                                android:text="@string/member"
+                                android:textSize="20sp" />
+
+
+                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -113,7 +130,8 @@
                                 android:gravity="start"
                                 android:fontFamily="@font/nunitobold"
                                 android:padding="5dp"
-                                android:text="ID :"
+                                android:textColor="@color/orange"
+                                android:text="@string/id_no"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -140,6 +158,7 @@
                                 android:padding="5dp"
                                 android:fontFamily="@font/nunitobold"
                                 android:text="Name :"
+                                android:textColor="@color/orange"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -153,11 +172,9 @@
                                 android:textSize="20sp" />
 
                         </LinearLayout>
-
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:orientation="horizontal">
 
                             <TextView
@@ -167,6 +184,7 @@
                                 android:padding="5dp"
                                 android:fontFamily="@font/nunitobold"
                                 android:text="DOB :"
+                                android:textColor="@color/orange"
                                 android:textSize="20sp" />
 
                             <TextView
@@ -186,16 +204,25 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center">
+                        android:layout_gravity="center"
+                        android:orientation="horizontal">
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Location :"
+                            android:padding="5dp"
+                            android:textColor="@color/orange"
+                            android:fontFamily="@font/nunitobold"
+                            android:gravity="start"
+                            android:textSize="20sp" />
                         <TextView
                             android:id="@+id/tvLocation"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Location :"
+                            android:text="Thane,Shahapur"
                             android:padding="5dp"
                             android:fontFamily="@font/nunitobold"
-                            android:gravity="start"
                             android:textSize="20sp" />
                     </LinearLayout>
 
@@ -235,16 +262,16 @@
             android:textColor="#fff"
             android:textSize="20sp" />
 
-        <com.google.android.material.button.MaterialButton
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnShareID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="20dp"
-            android:background="@drawable/shapebuttons"
+            android:background="@color/orange"
+            android:drawableStart="@drawable/ic_share"
             android:fontFamily="@font/nunitobold"
             android:padding="10dp"
-            android:text="@string/share_id_card"
             android:textColor="#fff"
             android:textSize="20sp" />
 
