--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_logo" />
+                android:src="@mipmap/ic_logo" />
 
             <TextView
                 android:id="@+id/tv_welcome"
@@ -40,7 +40,7 @@
                 android:textColor="@color/design_default_color_error"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:text="@string/welcome" />
+                android:text="Welcome" />
         </LinearLayout>
 
 </merge>
