--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -17,7 +17,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:background="@drawable/ic_logo"
-            android:contentDescription="Logo" />
+            android:contentDescription="TODO" />
 
     </RelativeLayout>
 
@@ -27,8 +27,7 @@
         android:layout_height="120dp"
         android:layout_below="@id/relativeLayout"
         android:layout_marginTop="-50dp"
-        android:background="@drawable/waves"
-        android:contentDescription="Waves" />
+        android:background="@drawable/waves" />
 
     <TextView
         android:id="@+id/textView"
@@ -60,6 +59,7 @@
         android:layout_below="@id/textView1"
         android:layout_centerHorizontal="true"
         android:digits="0123456789"
+        android:inputType="number"
         android:hint="Please Enter OTP"
         android:maxLength="6" />
 
