--- a/app/src/main/res/layout/capture_layout.xml
+++ b/app/src/main/res/layout/capture_layout.xml
@@ -7,127 +7,130 @@
     android:orientation="vertical">
 
 
-    <include
-        layout="@layout/header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+        <include
+            layout="@layout/header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="@font/nunitobold"
-            android:gravity="center"
-            android:text="@string/photo_for_id_card"
-            android:textColor="#f4641d"
-            android:textSize="35sp" />
-
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/ivPhoto"
-            android:layout_width="400dp"
-            android:layout_height="300dp"
-            android:layout_gravity="center"
-            android:contentDescription="TODO"
-            android:src="@mipmap/ic_profile"
-            app:civ_border_color="@color/grey"
-            app:civ_border_width="1dp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/btnCapture"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:contentDescription="Capture"
-                    android:fontFamily="@font/nunitobold"
-                    android:src="@drawable/ic_camera"
-                    android:text="Capture"
-                    android:textColor="#fff"
-                    android:textSize="20sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:fontFamily="@font/nunitobold"
-                    android:gravity="center"
-                    android:text="Click to Capture"
-                    android:textColor="#f4641d"
-                    android:textSize="20sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:layout_marginBottom="10dp"
+                        android:fontFamily="@font/nunitobold"
+                        android:gravity="center"
+                        android:text="@string/photo_for_id_card"
+                        android:textColor="#f4641d"
+                        android:textSize="35sp" />
 
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/ivPhoto"
+                        android:layout_width="400dp"
+                        android:layout_height="300dp"
+                        android:layout_gravity="center"
+                        app:civ_border_width="1dp"
+                        app:civ_border_color="@color/grey"
+                        android:contentDescription="TODO"
+                        android:src="@mipmap/ic_profile" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/btnCapture"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/nunitobold"
+                                android:src="@drawable/ic_camera"
+                                android:text="Capture"
+                                android:textColor="#fff"
+                                android:textSize="20sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="20dp"
+                                android:layout_marginBottom="10dp"
+                                android:fontFamily="@font/nunitobold"
+                                android:gravity="center"
+                                android:text="Click to Capture"
+                                android:textColor="#f4641d"
+                                android:textSize="20sp" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/llbrowse"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/ivGallery"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/nunitobold"
+                                android:src="@drawable/ic_photogallery"
+                                android:text="Gallery"
+                                android:textColor="#fff"
+                                android:textSize="20sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="20dp"
+                                android:layout_marginBottom="10dp"
+                                android:fontFamily="@font/nunitobold"
+                                android:gravity="center"
+                                android:text="Browse Photo"
+                                android:textColor="#f4641d"
+                                android:textSize="20sp" />
+
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btnNext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="30dp"
+                        android:fontFamily="@font/nunitobold"
+                        android:shadowColor="@color/colorPrimaryDark"
+                        android:text="@string/next"
+                        android:textColor="#fff"
+                        android:textSize="30sp" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/ivGallery"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:contentDescription="Gallery"
-                    android:fontFamily="@font/nunitobold"
-                    android:src="@drawable/ic_photogallery"
-                    android:text="Gallery"
-                    android:textColor="#fff"
-                    android:textSize="20sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:fontFamily="@font/nunitobold"
-                    android:gravity="center"
-                    android:text="Browse Photo"
-                    android:textColor="#f4641d"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnNext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="30dp"
-            android:fontFamily="@font/nunitobold"
-            android:shadowColor="@color/colorPrimaryDark"
-            android:text="@string/next"
-            android:textColor="#fff"
-            android:textSize="30sp" />
-    </LinearLayout>
 </LinearLayout>
-
-
