--- a/app/src/main/res/layout/profiledetails_activity.xml
+++ b/app/src/main/res/layout/profiledetails_activity.xml
@@ -15,8 +15,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
 
@@ -203,5 +203,4 @@
 
 
 </LinearLayout>
-
 
